--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,20 @@
 name: order_payments
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
   cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_dotenv: ^5.0.2
   google_fonts: ^4.0.3
   http: ^0.13.5
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +26,4 @@ flutter:
   assets:
     - assets/icon/avatar.png
     - assets/bg-home.png
+    - .env
