--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
@@ -14,6 +15,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   google_fonts: ^4.0.3
   http: ^0.13.5
+  intl: ^0.18.0
   shared_preferences: ^2.1.0
 
 dev_dependencies:
@@ -27,3 +29,12 @@ flutter:
     - assets/icon/avatar.png
     - assets/bg-home.png
     - .env
+  fonts:
+    - family: Poppins
+      fonts :
+        - asset: fonts/Poppins-Regular.ttf
+          weight : 400
+        - asset: fonts/Poppins-SemiBold.ttf
+          weight: 500
+        - asset: fonts/Poppins-Bold.ttf
+          weight: 700
