--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,15 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
+  awesome_dialog: ^3.0.2
   cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.5
+  dropdown_button2: ^2.0.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_dotenv: ^5.0.2
+  flutter_svg: ^2.0.5
   google_fonts: ^4.0.3
   http: ^0.13.5
   intl: ^0.18.0
@@ -26,14 +29,14 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/icon/avatar.png
-    - assets/bg-home.png
+    - assets/icon/
+    - assets/image/
     - .env
   fonts:
     - family: Poppins
-      fonts :
+      fonts:
         - asset: fonts/Poppins-Regular.ttf
-          weight : 400
+          weight: 400
         - asset: fonts/Poppins-SemiBold.ttf
           weight: 500
         - asset: fonts/Poppins-Bold.ttf
